change width to prevent shift on mobile

--- a/Control.Geocoder.css
+++ b/Control.Geocoder.css
@@ -20,7 +20,7 @@
 }
 
 .leaflet-touch .leaflet-control-geocoder.leaflet-control-geocoder-expanded {
-	width:75%;
+	width:60%;
 	height:auto !important;
 }
 
